Mma 5532 update (#13)
* MMA-5519: Ryddet i kode, endret navn til fagarkiv siden den omfatter både dokarkiv og saf

* MMA-5533 Legger inn nye objekter med forventet namespace

* MMA-5533 Legger inn nye objekter med forventet namespace

* MMA-5533 La inn composite ID

* MMA-5533 Clean up, la til caching på STS

* MMA-5533 clean up

* MMA-5533 clean up

* MMA-5533 clean up

* MMA-5533 clean up

* MMA-5533 clean up

* MMA-5533 clean up

* MMA-5533 clean up

* MMA-5533 ta med arkiverte og produksjon

* MMA-5532: La til filtype i

* MMA-5532: La til filtype i

* MMA-5532: Force version for Spring

* MMA-5532: La til joark (gammel versjon), fjernet SAF siden vi uansett må hente fra Joark.

* MMA-5532: Oppdaterte endpoints

* MMA-5532: Oppdaterte endpoints

* MMA-5532: Oppdaterte endpoints

* MMA-5532: Fjernet CXF

* MMA-5532: Fjernet SAF endpoint

* MMA-5532: Oppdaterte Endpoints, fjernet ubrukt import

* MMA-5532: MR-Comments

* MMA-5532: MR-Comments

* MMA-5532: MR-Comments