@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.7.RELEASE</version>
+		<version>2.5.2</version>
 	</parent>
 	<groupId>no.nav.brevserver</groupId>
 	<artifactId>brevserver</artifactId>
@@ -13,14 +13,12 @@
 	<version>10.2.1-SNAPSHOT</version>
 
 	<modules>
-		<module>brevserver-config</module>
 		<module>brevserver-server-common-java</module>
 		<module>core</module>
 		<module>fagarkiv-consumer</module>
 		<module>service</module>
 		<module>brevserver-klient-applet</module>
 		<module>app</module>
-		<module>brevserver-asposeconfig</module>
 
 	</modules>
 
@@ -30,7 +28,6 @@
 		<java.version>11</java.version>
 		<web.context.root>/brevweb</web.context.root>
 		<powermock.version>2.0.9</powermock.version>
-		<stelvio.version>2.2.0</stelvio.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<h2.version>1.4.195</h2.version>
 		<swagger.version>2.9.2</swagger.version>
@@ -43,7 +40,9 @@
 		<camel.version>3.7.1</camel.version>
 		<lombok.version>1.18.20</lombok.version>
 		<cxf.version>3.4.4</cxf.version>
-		<spring.version>2.3.7.RELEASE</spring.version>
+		<stelvio.version>2.2.0</stelvio.version>
+		<journalbehandling-tjenestespesifikasjon.version>1.3.3</journalbehandling-tjenestespesifikasjon.version>
+		<nav-journal-v2-tjenestespesifikasjon.version>1.0.3</nav-journal-v2-tjenestespesifikasjon.version>
 	</properties>
 
 	<scm>
@@ -56,56 +55,64 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>no.nav.brevserver</groupId>
-				<artifactId>brevserver-server-common-java</artifactId>
-				<version>${project.version}</version>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
-				<groupId>no.nav.brevserver</groupId>
-				<artifactId>brevserver-config-common-env</artifactId>
-				<version>${project.version}</version>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
-				<groupId>no.nav.brevserver</groupId>
-				<artifactId>brevserver-config</artifactId>
-				<version>${project.version}</version>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
-				<groupId>no.nav.brevserver</groupId>
-				<artifactId>brevserver-klient-applet</artifactId>
-				<version>${project.version}</version>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
-				<groupId>no.nav.brevserver</groupId>
-				<artifactId>nav-brevserver-resource-config</artifactId>
-				<version>${project.version}</version>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
-				<groupId>no.nav.brevserver</groupId>
-				<artifactId>service</artifactId>
-				<version>${project.version}</version>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aop</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
-				<groupId>no.nav.brevserver</groupId>
-				<artifactId>dokarkiv-consumer</artifactId>
-				<version>${project.version}</version>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
-				<groupId>no.nav.brevserver</groupId>
-				<artifactId>core</artifactId>
-				<version>${project.version}</version>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-orm</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
-				<groupId>no.nav.tjenester.brevogarkiv</groupId>
-				<artifactId>dokumentbehandling-tjenestespesifikasjon</artifactId>
-				<version>1.0.2</version>
-				<classifier>jaxws</classifier>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jms</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
-				<groupId>no.nav.tjenester.brevogarkiv</groupId>
-				<artifactId>loggmottak-tjenestespesifikasjon</artifactId>
-				<version>1.0.1</version>
-				<classifier>jaxws</classifier>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context-support</artifactId>
+				<version>5.3.9</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+				<version>5.3.9</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-expression</artifactId>
+				<version>5.3.9</version>
 			</dependency>
 			<dependency>
 				<groupId>no.stelvio</groupId>
@@ -120,12 +127,10 @@
 						<groupId>no.stelvio</groupId>
 						<artifactId>stelvio-domain-java</artifactId>
 					</exclusion>
-					<!--
 					<exclusion>
 						<groupId>javax.persistence</groupId>
 						<artifactId>persistence-api</artifactId>
 					</exclusion>
-					-->
 					<exclusion>
 						<groupId>org.springframework</groupId>
 						<artifactId>spring-context</artifactId>
@@ -181,37 +186,62 @@
 				</exclusions>
 			</dependency>
 			<dependency>
-				<groupId>no.stelvio</groupId>
-				<artifactId>stelvio-common-java</artifactId>
-				<version>${stelvio.version}</version>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>brevserver-server-common-java</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>brevserver-config-common-env</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>brevserver-config</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>brevserver-klient-applet</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>nav-brevserver-resource-config</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>service</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>fagarkiv-consumer</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.brevserver</groupId>
+				<artifactId>core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.tjenester.brevogarkiv</groupId>
+				<artifactId>dokumentbehandling-tjenestespesifikasjon</artifactId>
+				<version>1.0.2</version>
+				<classifier>jaxws</classifier>
+			</dependency>
+			<dependency>
+				<groupId>no.nav.tjenester.brevogarkiv</groupId>
+				<artifactId>loggmottak-tjenestespesifikasjon</artifactId>
+				<version>1.0.1</version>
+				<classifier>jaxws</classifier>
 			</dependency>
 			<dependency>
 				<groupId>aspose</groupId>
 				<artifactId>aspose-words-jdk15</artifactId>
 				<version>11.2.0</version>
 			</dependency>
-			<!--
-			<dependency>
-				<groupId>com.ibm</groupId>
-				<artifactId>com.ibm.mq</artifactId>
-				<version>7.0</version>
-			</dependency>
-			<dependency>
-				<groupId>com.ibm</groupId>
-				<artifactId>com.ibm.mqjms</artifactId>
-				<version>7.0</version>
-			</dependency>
-			<dependency>
-				<groupId>com.ibm</groupId>
-				<artifactId>dhbcore</artifactId>
-				<version>7.0</version>
-			</dependency>
-			<dependency>
-				<groupId>com.ibm.mq</groupId>
-				<artifactId>jmqi</artifactId>
-				<version>7.0</version>
-			</dependency>
-			-->
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
@@ -259,52 +289,20 @@
 				<version>2.4.0</version>
 			</dependency>
 			<dependency>
-				<groupId>javax</groupId>
-				<artifactId>javaee-api</artifactId>
-				<version>6.0</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.ejb</groupId>
-				<artifactId>ejb</artifactId>
-				<version>3.0</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>javax.annotation</groupId>
-				<artifactId>jsr250-api</artifactId>
-				<version>1.0</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>servlet-api</artifactId>
-				<version>2.5</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>javax.servlet.jsp</groupId>
-				<artifactId>jsp-api</artifactId>
-				<version>2.2</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
 				<groupId>javax.jms</groupId>
 				<artifactId>jms</artifactId>
 				<version>1.1</version>
-				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>javax.mail</groupId>
 				<artifactId>mail</artifactId>
 				<version>1.6.6</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>3.1</version>
 			</dependency>
-
 			<dependency>
 				<groupId>no.nav.tjenester</groupId>
 				<artifactId>nav-journal-tjenestespesifikasjon</artifactId>
@@ -314,7 +312,7 @@
 			<dependency>
 				<groupId>no.nav.tjenester</groupId>
 				<artifactId>nav-journalbehandling-tjenestespesifikasjon</artifactId>
-				<version>1.1.0</version>
+				<version>${journalbehandling-tjenestespesifikasjon.version}</version>
 				<classifier>jaxws</classifier>
 			</dependency>
 			<dependency>
@@ -436,12 +434,6 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.sun.xml.ws</groupId>
-				<artifactId>jaxws-ri</artifactId>
-				<version>2.3.2</version>
-				<type>pom</type>
-			</dependency>
-			<dependency>
 				<groupId>com.sun.istack</groupId>
 				<artifactId>istack-commons-runtime</artifactId>
 				<version>2.2</version>
@@ -460,11 +452,6 @@
 
 			<!--nye deps-->
 			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-actuator</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
 				<version>${lombok.version}</version>
@@ -476,22 +463,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-spring-boot-starter-jaxws</artifactId>
-				<version>${cxf.version}</version>
-			</dependency>
-
 
 			<dependency>
 				<groupId>javax.activation</groupId>
 				<artifactId>javax.activation-api</artifactId>
 				<version>1.2.0</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-validation</artifactId>
-				<version>${spring.version}</version>
 			</dependency>
 
 			<!-- Ny MQ -->
@@ -532,6 +508,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -540,21 +517,29 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito2</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.vaadin.external.google</groupId>
+					<artifactId>android-json</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -572,121 +557,20 @@
 				<version>1.0</version>
 			</extension>
 		</extensions>
-
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.1</version>
-					<configuration>
-						<source>${java.version}</source>
-						<target>${java.version}</target>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-pmd-plugin</artifactId>
-					<version>2.6</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jxr-plugin</artifactId>
-					<version>2.3</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.9</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.6</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.7</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-clean-plugin</artifactId>
-					<version>2.5</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-install-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-site-plugin</artifactId>
-					<version>2.0.1</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.4</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>test-jar</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.2.1</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M3</version>
-					<configuration>
-						<argLine>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens
-							java.base/jdk.internal.loader=ALL-UNNAMED
-						</argLine>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-report-plugin</artifactId>
-					<version>3.0.0-M3</version>
-				</plugin>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>sonar-maven-plugin</artifactId>
-					<version>2.1</version>
-				</plugin>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>sql-maven-plugin</artifactId>
-					<version>1.3</version>
-				</plugin>
-				<plugin>
-					<groupId>com.mysema.querydsl</groupId>
-					<artifactId>querydsl-maven-plugin</artifactId>
-					<version>3.3.0</version>
-				</plugin>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>1.8</version>
-				</plugin>
-				<plugin>
-					<groupId>no.nav.maven.plugins</groupId>
-					<artifactId>aura-maven-plugin</artifactId>
-					<configuration>
-						<apps>brevserver:${project.version}</apps>
-					</configuration>
-				</plugin>
-				<plugin>
-					<artifactId>maven-checkstyle-plugin</artifactId>
-					<version>2.3</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M3</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.0.0-M3</version>
+			</plugin>
+			<plugin>
 				<artifactId>maven-toolchains-plugin</artifactId>
-				<version>1.1</version>
+				<version>3.0.0</version>
 				<executions>
 					<execution>
 						<goals>
@@ -705,70 +589,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
-	<!-- Reporting settings -->
-	<reporting>
-		<plugins>
-			<plugin>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.7.1</version>
-			</plugin>
-			<plugin>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<configLocation>http://confluence.adeo.no/download/attachments/12007/nav_checkstyle.xml
-					</configLocation>
-					<excludes>**/*_*</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.3</version>
-			</plugin>
-			<plugin>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<targetJdk>11</targetJdk>
-					<rulesets>
-						<ruleset>http://confluence.adeo.no/download/attachments/12007/nav_pmd.xml</ruleset>
-					</rulesets>
-					<format>xml</format>
-					<minimumTokens>100</minimumTokens>
-					<excludes>
-						<exclude>**/*_*</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>1.2</version>
-				<configuration>
-					<threshold>Normal</threshold>
-					<!--High|Normal|Low|Exp -->
-					<effort>Default</effort>
-					<!--Min|Default1Max -->
-					<excludeFilterFile>
-						http://confluence.adeo.no/download/attachments/107131/nav-stelvio-findbugs-exclude.xml
-					</excludeFilterFile>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9</version>
-				<reportSets>
-					<reportSet>
-						<id>html</id>
-						<reports>
-							<report>javadoc</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-		</plugins>
-	</reporting>
-
 </project>
